--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <title>MathQuiz</title>
 </head>
 <body>
-    
-</body>
     <div id="container">
         <div id="score">
-            score: <span id=scorevalue >0</span>
+            score: <span id="scorevalue">0</span>
         </div>
         <div id="correct">
             correct
@@ -33,15 +31,16 @@
             <div id="box4" class="box">47</div>
         </div>
         <div id="startreset">
-            Start/Reset
+            Start Game
         </div>
-        <div id="timer">
-            Timer : 24 sec 
+        <div id="timeremaining">
+            Timer: <span id="timeremainingvalue">12</span> sec 
         </div>
         <div id="gameover">
-            <p>GAME OVER</p> 
-            <p>Your score is 20</p> 
+            <!-- <p>GAME OVER</p> 
+            <p>Your score is 20</p>  -->
         </div>
-
     </div>
+    <script src="javascript.js"></script>
+</body>
 </html>
