--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             wrong
         </div>
         <div id="Qshow">
-            3x1
+            
         </div>
         <div id="result">
             show anwser
         </div>
         <div id="choices">
-            <div id="box1" class="box">40</div>
-            <div id="box2" class="box">56</div>
-            <div id="box3" class="box">46</div>
-            <div id="box4" class="box">47</div>
+            <div id="box1" class="box"></div>
+            <div id="box2" class="box"></div>
+            <div id="box3" class="box"></div>
+            <div id="box4" class="box"></div>
         </div>
         <div id="startreset">
             Start Game
@@ -37,8 +37,7 @@
             Timer: <span id="timeremainingvalue">12</span> sec 
         </div>
         <div id="gameover">
-            <!-- <p>GAME OVER</p> 
-            <p>Your score is 20</p>  -->
+           
         </div>
     </div>
     <script src="javascript.js"></script>
